--- a/distribution/docs/src/main/resources/content/_introduction/_coreConcepts/ingest-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_introduction/_coreConcepts/ingest-intro.adoc
@@ -11,5 +11,5 @@ Ingest is the process of bringing data resources, metadata, or both into the cat
 Ingested files are <<{integrating-prefix}transformers,transformed>> into a neutral format that can be searched against as well as migrated to other formats and systems.
 See <<{managing-prefix}ingesting_data, Ingesting Data>> for the various methods of ingesting data.
 
-Upon ingest, a transformer will read the metadata from the ingested file and populate the fields of a metacard.
+Upon ingest, a transformer reads the metadata from the ingested file and populates the fields of a metacard.
 Exactly how this is accomplished depends on the origin of the data, but most fields (except id) are imported directly.
